app/spinnaker/ingress-spin-deck.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-spinnaker
  namespace: spinnaker
spec:
  ingressClassName: nginx
  rules:
  - host: spinnaker.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spin-deck 
            port: 
              number: 9000
