app/spinnaker/ingress-spin-gate.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-spinnaker-gate
  namespace: spinnaker
spec:
  ingressClassName: nginx
  rules:
  - host: spinnaker-gate.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spin-gate
            port: 
              number: 8084
